Modificação nos arquivos course-list.component .html e .ts mais inclusão do font-awesome no arquivo style.css mais criação do folder app/star

--- a/src/app/courses/course-list.component.html
+++ b/src/app/courses/course-list.component.html
@@ -13,7 +13,7 @@
     </thead>
     <thead>
         <tr *ngFor="let course of courses"> <!-- *ngFor="" itera sobre os elementos, no caso os cursos. Let representa uma var local -->
-            <td>{{ course.image }}</td>
+            <td><img [src]="course.imageUrl" width="40" height="40"></td>
             <td>{{ course.name }}</td>
             <td>{{ course.price }}</td>
             <td>{{ course.code }}</td>
