--- a/src/app/courses/course-list.component.html
+++ b/src/app/courses/course-list.component.html
@@ -1,26 +1,35 @@
 <h2>Course List</h2>
 
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>Image</th>
-            <th>Name</th>
-            <th>Price</th>
-            <th>Code</th>
-            <th>Release Date</th>
-            <th>Rating</th>
-        </tr>
-    </thead>
-    <thead>
-        <tr *ngFor="let course of courses"> <!-- *ngFor="" itera sobre os elementos, no caso os cursos. Let representa uma var local -->
-            <td><img [src]="course.imageUrl" width="40" height="40"></td>
-            <td>{{ course.name }}</td>
-            <td>{{ course.price }}</td>
-            <td>{{ course.code }}</td>
-            <td>{{ course.releaseDate }}</td>
-            <td>{{ course.rating }}</td>
-        </tr>
-    </thead>
-    
+<div class="form-group row">
+  <label class="col-sm-2 col-from-label">Filtrado por:</label>
+  <div class="col-sm-10">
+    <input [(ngModel)]="filter" class="form-control" type="text" />
+  </div>
+</div>
 
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Image</th>
+      <th>Name</th>
+      <th>Price</th>
+      <th>Code</th>
+      <th>Release Date</th>
+      <th>Rating</th>
+      <th>Options</th>
+    </tr>
+  </thead>
+  <thead>
+    <tr *ngFor="let course of filteredCourses">
+      <td><img [src]="course.imageUrl" width="40" height="40" /></td>
+      <td>{{ course.name }}</td>
+      <td>{{ course.price }}</td>
+      <td>{{ course.code }}</td>
+      <td>{{ course.releaseDate }}</td>
+      <td>
+        <app-star [rating]="course.rating"></app-star>
+      </td>
+      <td></td>
+    </tr>
+  </thead>
 </table>
